Sat Mar 21 08:17:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn): omit program name
	  if actual program path is found.  [ruby-core:22960]

Sat Mar 21 07:25:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (pipe_open): should pass program name even if multiple
	  arguments are given.  fix for TestProcess::test_argv0.

Sat Mar 21 02:37:07 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/lib/openssl/buffering.rb
	  (OpenSSL::Buffering#write_nonblock): new method.

	* ext/openssl/ossl_ssl.c (ossl_ssl_write_nonblock): new method.
	  (ossl_ssl_write_internal): defined.
	  (ossl_ssl_write): use ossl_ssl_write_internal.

Fri Mar 20 18:25:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (errmap): added ERROR_MOD_NOT_FOUND.

Fri Mar 20 09:22:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (libprefix): must not append "lib" after $(libdir),
	  when load_relative is not used on darwin.  a patch from Kenta
	  Murata at [ruby-dev:38182].

Thu Mar 19 20:29:40 2009  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_mWaitReadable): defined.
	  (rb_mWaitWritable): defined.
	  (io_getpartial): extend IO::WaitReadable on EWOULDBLOCK and EAGAIN.
	  (rb_io_write_nonblock): extend IO::WaitWritable on EWOULDBLOCK and
	  EAGAIN.

	* error.c (make_errno_exc): extracted from rb_sys_fail.
	  (rb_mod_sys_fail): new function.

	* include/ruby/ruby.h (rb_mod_sys_fail): declared.
	  (rb_mWaitReadable): declared.
	  (rb_mWaitWritable): declared.

	* ext/socket/init.c (rsock_s_recvfrom_nonblock): extend
	  IO::WaitReadable on EWOULDBLOCK and EAGAIN.
	  (rsock_s_accept_nonblock): extend IO::WaitReadable on EWOULDBLOCK,
	  EAGAIN, ECONNABORTED and EPROTO.

	* ext/socket/socket.c (sock_connect_nonblock): extend IO::WaitWritable
	  on EINPROGRESS.

	* ext/socket/ancdata.c (bsock_sendmsg_internal): extend
	  IO::WaitWritable on EWOULDBLOCK and EAGAIN.